# Project_Buyme

./: base.py  constans.py  pyproject.toml  test_choose.py  test_main.py
allure-report/: index.html
allure-report/export/: influxDbData.txt
alure-reports/: 0c7ae363-0abf-40e1-84f3-db49f7dfcc22-result.json  134cc681-a75b-4d48-a40b-d926ba7b6d10-result.json  1e686d2d-efea-47c4-aa3d-8951ffd4f1e2-result.json  21e14a56-fdf9-4da3-a15f-245a95cb0a2a-result.json  293e9278-954d-4c33-a10d-90daaa1f8511-result.json  2b45c2b5-89ef-4278-b9f4-690dbd8f322a-container.json  34d61f51-3674-4011-b0d6-fff52060d3cb-result.json  3c92b9fc-22fb-43a6-a9a2-b32263006d9b-result.json  71782beb-3a72-4e6c-8c8d-a0af460e545f-container.json  7d0a66fe-971d-4067-af76-ba6bc246b8ee-result.json  8b0949a5-7d47-416c-8169-3ac7a6308700-result.json  8d7a91d3-eac7-443b-9b51-252ca72047b6-result.json  c05afbcc-575a-42b3-94a9-993f9b2b705b-result.json  d10c82ab-f976-4cfb-88f4-e81920e341e8-result.json  e093398b-c0ca-4212-a40b-680279dd0967-container.json  ef68184b-d44e-4481-814b-878386c66cb2-container.json  f086f70e-024f-4e47-ba12-d79146ce08cb-result.json
json_file/: Json_func.py
tests/: choose_business.py  home_screen.py  regestration.py  sender_info.py
